--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,19 +5,19 @@
     margin: 0;
     padding: 0;
     font-family: 'Inconsolata', monospace;
+
 }
 
 html{
     background: black;
-    scroll-snap-type: y mandatory;
-    overflow: scroll;
-    overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 .container{
     width: 100%;
     height: 100vh;
-    scroll-behavior: smooth;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
 }
 
 ::-webkit-scrollbar {
@@ -25,12 +25,15 @@ html{
     background: transparent;  /* Optional: just make scrollbar invisible */
 }
 
+.section iframe{
+    overflow: hidden;
+}
+
 .section{
     width: 100%;
     height: 100vh;
-    scroll-snap-align: center;
-    background-size: cover;
     color: white;
+    scroll-snap-align: start;
 }
 
 .main{
@@ -140,17 +143,17 @@ html{
     animation: cycleBorder 5s linear infinite alternate;
     width: 80%;
     height: 50vh;
-    display: flex;
-    position: absolute;
-    margin-left: 10%;
+    display: inline-block;
     margin-top: 10%;
+    margin-left: 10%;
     flex-direction: column;
     overflow: scroll;
 }
 
 .script{
     font-size: 1.5vw;
-
+    text-align: justify;
+    text-align-last: center;
 }
 
 .contact{
