--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,12 +21,8 @@ html{
 }
 
 ::-webkit-scrollbar {
-    width: 0px;  /* Remove scrollbar space */
-    background: transparent;  /* Optional: just make scrollbar invisible */
-}
-
-.section iframe{
-    overflow: hidden;
+    width: 0px;
+    background: transparent;
 }
 
 .section{
@@ -156,13 +152,12 @@ html{
     text-align-last: center;
 }
 
-.contact{
+.contact {
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 10%;
+    padding-top: 5%;
     color: white;
 }
+
 
 .zulsorter{
     float: left;
