--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,13 +4,15 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Inconsolata', monospace;
-
 }
 
 html{
     background: black;
     scroll-behavior: smooth;
+    font-family: 'Inconsolata', monospace;
+}
+body{
+    font-family: 'Inconsolata', monospace;
 }
 
 .container{
@@ -144,7 +146,7 @@ html{
 }
 
 .script{
-    font-size: 1em;
+    font-size: 1rem;
     text-align: justify;
     text-align-last: center;
 }
