--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,7 @@ html{
     background: black;
     scroll-behavior: smooth;
     font-family: 'Inconsolata', monospace;
+    word-spacing: 0.1vw; !important;
 }
 body{
     font-family: 'Inconsolata', monospace;
@@ -146,7 +147,7 @@ body{
 }
 
 .script{
-    font-size: 1rem;
+    font-size: 1.25rem;
     text-align: justify;
     text-align-last: center;
 }
